--- a/app/views/videos/new.html.haml
+++ b/app/views/videos/new.html.haml
@@ -14,5 +14,5 @@
 			= f.submit "create", data:{uploads_target: "submit"}
 
 
-%turbo-frame{id: "content"}
+%turbo-frame{id: "content", data:{turbo:{action: "advance"}}}
 
