--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,5 +1,17 @@
-.container.pt-4
-	%h1 Videos
+%turbo-frame{id: "content", data:{turbo:{action: "advance"}}}
+	.container.p-4
+		%h1 Videos
 
-	- @videos.each do |v|
-		%a{href: video_url(v), target: "_top"} #{v.title}
+		.row
+			- videos.each do |video|
+				.col-sm-6.col-md-3
+					.card.border.border-dark
+						.card-img-top.position-relative.w-100.bg-dark.text-light{style: "padding-top: 56.25%"}
+							.position-absolute.top-0.start-0.bottom-0.end-0.border.border-dark
+								.row.h-100
+									.align-self-center.text-center
+										.display-6 Awaiting Upload
+						.card-body
+							.card-title #{video.title}
+							.row
+								%a.btn.btn-dark.btn-lg.stretched-link{href: edit_video_path(video), data:{turbo:{frame: "content"}}} Edit Details
