--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -3,7 +3,7 @@
 		%h1 Videos
 
 		.row
-			- videos.each do |video|
+			- @videos.each do |video|
 				.col-sm-6.col-md-3
 					.card.border.border-dark
 						.card-img-top.position-relative.w-100.bg-dark.text-light{style: "padding-top: 56.25%"}
