--- a/app/views/videos/update.turbo_stream.haml
+++ b/app/views/videos/update.turbo_stream.haml
@@ -1,1 +1,1 @@
-= turbo_stream.replace("content", partial: "videos/index", locals: {videos: @videos})
+= turbo_stream.replace("content", partial: "videos/indexs", locals: {videos: @videos})
