added CAD logo, added sample code for chroma keyed videos

--- a/app/views/camps/show.html.haml
+++ b/app/views/camps/show.html.haml
@@ -50,3 +50,5 @@
 				%img.w-100{src: "https://storage.googleapis.com/dbsan-public/sponsors/ASD%20LOGO.png", alt: "ASD"}
 			.col-6.col-md-3.mx-auto
 				%img.w-100{src: "https://storage.googleapis.com/dbsan-public/sponsors/WRSD%20logo.jpg", alt: "WRSD"}
+			.col-6.col-md-3.mx-auto
+				%img.w-100{src: "https://storage.googleapis.com/dbsan-public/sponsors/image.png", alt: "CAD"}
