--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -2,6 +2,10 @@
 	- if @channel.name == "ILY by Tricio"
 		= render partial: "videos/ilybytricio", locals: {video: video}
 	- else
-		.container-md.mb-4
-			%video{src: video.original_upload.url, preload: "metadata", controls: "true", width: "100%"}
+		.container-md.mb-4{data:{controller: "video-container"}}
+			.container{data:{video:{container:{target: "container"}}}}
+				%video{data:{video:{container:{target: "video"}}}, src: video.original_upload.url, preload: "metadata", controls: "true", width: "100%"}
 			%h1.mb-4 #{video.title}	
+			- if video.chroma_keyed?
+				.d-flex
+					%button.btn-dark.btn.btn-lg{type: "button", data:{action: "click->video-container#setBackground"}} Red
