working on the more actions buttons

--- a/app/views/videos/cue_blocks/_block.html.haml
+++ b/app/views/videos/cue_blocks/_block.html.haml
@@ -9,12 +9,14 @@
 				.pe-1
 					%a.btn.btn-outline-dark.btn-lg{href: edit_video_cue_block_path(block.video, block)}
 						%bi.bi-pencil
-				= render partial: "videos/cue_blocks/more_actions/show_more_actions", locals: {block: block}
+				= render partial: "videos/cue_blocks/more_actions/show_more_actions", locals: {block: block, video: video}
 			.d-flex
 				.p-2.flex-grow-1
 					#{block.start.strftime("%H:%M:%S.%L")} to #{block.end.strftime("%H:%M:%S.%L")}
 				- if block.sdh?
 					.p-2.me-4
 						%span.badge.bg-dark SDH
-			- block.payload.each do |p|
-				%p #{p}
+			
+			- unless block.payload.nil?
+				- block.payload.each do |p|
+					%p #{p}
