--- a/app/views/videos/cue_blocks/more_actions/_show_more_actions.html.haml
+++ b/app/views/videos/cue_blocks/more_actions/_show_more_actions.html.haml
@@ -5,30 +5,34 @@
 		%li.mb-0
 			%h3.dropdown-header Insert Above
 		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Person Distinction
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Visual Description
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Paragraph Break
+			-#= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Above", current_block: block.cue_num, cue_num: block.cue_num, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Person Distinction
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Visual Description
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Paragraph Break
 		%li.mb-0
 			%hr.dropdown-divider
 		%li.mb-0
 			%h3.dropdown-header Insert Below
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Person Distinction
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Visual Description
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Paragraph Break
+		-#%li.mb-0
+			-#= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Below", current_block: block.cue_num, cue_num: block.cue_num + 1, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
+			
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Person Distinction
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Visual Description
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Paragraph Break
 		%li.mb-0
 			%hr.dropdown-divider
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Move Up
+		-#%li.mb-0
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Move Down
 		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Move Up
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Move Down
-		%li.mb-0
-			%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Delete
+			= button_to "Delete", video_cue_block_path(video, block), method: :delete, class: "btn btn-outline-dark btn-lg dropdown-item"
+			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Delete
