--- a/app/views/videos/cue_blocks/create.turbo_stream.haml
+++ b/app/views/videos/cue_blocks/create.turbo_stream.haml
@@ -1,1 +1,3 @@
 = turbo_stream.update("blocks", partial: "videos/cue_blocks/blocks", locals: {blocks: @blocks, video: @video})
+- if @block.cue_type == "subtitles_and_captions"
+	= turbo_stream.replace("block_#{@block.id}", partial: "videos/cue_blocks/edit_subtitles", locals: {block: @block})
