--- a/app/views/videos/cue_blocks/more_actions/_show_more_actions.html.haml
+++ b/app/views/videos/cue_blocks/more_actions/_show_more_actions.html.haml
@@ -5,7 +5,7 @@
 		%li.mb-0
 			%h3.dropdown-header Insert Above
 		%li.mb-0
-			-#= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Above", current_block: block.cue_num, cue_num: block.cue_num, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
+			= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Above", current_block: block.cue_num, cue_num: block.cue_num, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
 			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
 		-#%li.mb-0
 			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Person Distinction
@@ -17,8 +17,8 @@
 			%hr.dropdown-divider
 		%li.mb-0
 			%h3.dropdown-header Insert Below
-		-#%li.mb-0
-			-#= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Below", current_block: block.cue_num, cue_num: block.cue_num + 1, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
+		%li.mb-0
+			= button_to "Subtitle or Caption", video_cue_blocks_path(video, cue_block: { text_track_id: block.text_track.id, insert_position: "Below", current_block: block.cue_num, cue_num: block.cue_num + 1, cue_type: "subtitles_and_captions", start: block.start, end: block.start }), class: "btn btn-outline-dark btn-lg dropdown-item"
 			
 			-#%a.btn.btn-outline-dark.btn-lg.dropdown-item{href: "#"} Chapter	
 		-#%li.mb-0
