--- a/app/views/videos/text_tracks/update.turbo_stream.haml
+++ b/app/views/videos/text_tracks/update.turbo_stream.haml
@@ -1,1 +1,1 @@
-= turbo_stream.update("right", partial: "videos/cue_blocks/blocks", locals: {blocks: @blocks})
+= turbo_stream.update("right", partial: "videos/cue_blocks/blocks", locals: {blocks: @blocks, video: @video})
