added captions to the video element in the caption editor

--- a/app/views/videos/text_tracks/_show.html.haml
+++ b/app/views/videos/text_tracks/_show.html.haml
@@ -25,7 +25,8 @@
 			%turbo-frame{id: "left-side"}
 				%turbo-frame{id: "video_player"}
 					.p-0{style: "max-height: 60vh"}
-						%video{src: "#{track.video.original_upload.url}", preload: "metadata", width: "100%", controls: "true"}
+						%video{src: "#{track.video.original_upload.url}", preload: "metadata", width: "100%", controls: "true", playsinline: "true"}
+							%track{kind: "captions", srclang: "en", label: "English (CC)", src: video_text_track_captions_path(track.video, track)}
 					= render partial: "videos/text_tracks/transcript", locals: {track: track}
 		.col-4.overflow-auto{style: "max-height: 92vh"}
 			%turbo-frame{id: "right", data:{turbo:{action: "advance"}}}
